fix: login pages background color on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -135,7 +135,7 @@ html {
     }
   }
 
-  .login {
+  .login.login {
     background-color: var(--card-background-color) !important;
 
     .login-box {
